Closed Bug 388358 Opened 17 years ago Closed 17 years ago

Fix printf warnings in nsLineBox.cpp

Categories

(Core :: Layout, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mrbkap, Unassigned)

Details

Attachments

(1 file)

Attached patch FixSplinter Review
There are two warnings:
.../mozilla/layout/generic/nsLineBox.cpp:158: warning: format ‘%s’ expects type ‘char*’, but argument 3 has type ‘nscoord’
.../mozilla/layout/generic/nsLineBox.cpp:158: warning: too few arguments for format

This seems like it's a real bug, since fprintf will treat the nscoord as a |char *| pointer, which will likely crash. roc said on IRC to simply remove the %s.
Attachment #272554 - Flags: superreview?(roc)
Attachment #272554 - Flags: review?(roc)
Attachment #272554 - Flags: superreview?(roc)
Attachment #272554 - Flags: superreview+
Attachment #272554 - Flags: review?(roc)
Attachment #272554 - Flags: review+
Fix checked into trunk.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: