Fix printf format-specifier and args mismatch to prevent potential DEBUG-only crashes. bug 388358, r+sr=roc